--- a/custombg.css
+++ b/custombg.css
@@ -7,6 +7,6 @@
 	--window-bg: #24273a;
 	--surface-bg: #363a4f;
 	--text-color: #cad3f5;
-	--desktop-bg: url("/builtin/wallpapers/nord-dark.png"); /* or darkest color */
+	--desktop-bg: url("https://github.com/zcraftelite9495/codingstuffs/blob/4c99d1f4aa8f323c3366046baee23556a2068775/New%20Chromebook%20Backround%20v1.png"); /* or darkest color */
 	--font-family: "JetBrains Mono", monospace;
 }
