--- a/custombg.css
+++ b/custombg.css
@@ -7,6 +7,6 @@
 	--window-bg: #24273a;
 	--surface-bg: #363a4f;
 	--text-color: #cad3f5;
-	--desktop-bg: url("https://raw.githubusercontent.com/zcraftelite9495/codingstuffs/main/New%20Chromebook%20Backround%20v1.png?token=GHSAT0AAAAAACIMYIO25FY27CJGUQA4O2SAZI6YZWQ"); /* or darkest color */
+	--desktop-bg: url("https://github.com/zcraftelite9495/codingstuffs/blob/main/New%20Chromebook%20Backround%20v1.png"); /* or darkest color */
 	--font-family: "JetBrains Mono", monospace;
 }
