--- a/custombg.css
+++ b/custombg.css
@@ -7,6 +7,6 @@
 	--window-bg: #24273a;
 	--surface-bg: #363a4f;
 	--text-color: #cad3f5;
-	--desktop-bg: url("/bg.png"); /* or darkest color */
+	--desktop-bg: #BBBBBB; /* or darkest color */
 	--font-family: "JetBrains Mono", monospace;
 }
