--- a/custombg.css
+++ b/custombg.css
@@ -7,6 +7,6 @@
 	--window-bg: #24273a;
 	--surface-bg: #363a4f;
 	--text-color: #cad3f5;
-	--desktop-bg: #BBBBBB; /* or darkest color */
+	--desktop-bg: url("https://media.discordapp.net/attachments/1149414280572190750/1159217123281883176/New_Chromebook_Backround_v1.png; /* or darkest color */
 	--font-family: "JetBrains Mono", monospace;
 }
