--- a/Site/underconstruction.css
+++ b/Site/underconstruction.css
@@ -1,3 +1,12 @@
+body {
+    background-image: url('Assets/bg.jpg');
+}
+
+div.under-construction-notice {
+    text-align: center;
+    word-wrap: normal;
+    color: white;
+}
 p.paragraph {
     width: 700px;
     word-wrap: normal;
