Updated Repository Site

--- a/docs/underconstruction.css
+++ b/docs/underconstruction.css
@@ -3,6 +3,7 @@ body {
 }
 
 div.under-construction-notice {
+    font-family: 'Alumni Sans Collegiate One', sans-serif;
     text-align: center;
     color: white;
 }
