--- a/docs/underconstruction.css
+++ b/docs/underconstruction.css
@@ -2,7 +2,7 @@ body {
     background-image: url('Assets/bg.jpg');
 }
 div.under-construction-notice {
-    font-family: 'Alumni Sans Collegiate One', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     text-align: center;
     color: white;
 }
