--- a/docs/style.css
+++ b/docs/style.css
@@ -43,3 +43,11 @@ hr.rounded {
     border-top: 8px solid #bbb;
     border-radius: 5px;
 }
+
+/*Font Types*/
+*.font-comfortaa {
+    font-family: 'Comfortaa', sans-serif;
+}
+*.font-gloria-hallelujah {
+    font-family: 'Gloria Hallelujah', cursive;
+}
