Updated Repository Site + Developed Repository Site

--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,7 @@ body.under-construction-notice {
 }
 div.under-construction-notice {
     text-align: center;
-    color: white;
+    color: orange;
 }
 
 /*Body Homepage Styles*/
