Updated Repository Site - Testing Intro Design

--- a/docs/style.css
+++ b/docs/style.css
@@ -18,13 +18,15 @@ div.header {
 /*Main Style Types*/
 p.paragraph {
     width: 700px;
+    max-width: 100%;
     word-wrap: normal;
 }
 p.paragraph-centered {
     width: 700px;
+    max-width: 100%;
     word-wrap: normal;
     text-align: center;
-}
+  }
 *.centered {
     text-align: center;
 }
