Updated Repository Site - Updated Fonts

--- a/docs/style.css
+++ b/docs/style.css
@@ -57,3 +57,6 @@ hr.rounded {
 *.font-gloria-hallelujah {
     font-family: 'Gloria Hallelujah', cursive;
 }
+*.font-julius-sans-one {
+    font-family: 'Julius Sans One', sans-serif;
+}
