--- a/VencordStuffs/BetterMediaPlayer.plugin.css
+++ b/VencordStuffs/BetterMediaPlayer.plugin.css
@@ -255,8 +255,15 @@
     height: 50px;
     transition: height 0.4s ease-out;
     overflow: hidden;
+    #vc-spotify-info-wrapper {
+        #vc-spotify-titles {
+                &:has(> #vc-spotify-album-title) {
+                    display: none;
+                    transition: opacity 0.4s ease-out;
+                }
+            }
     #vc-spotify-progress-bar,
-    .vc-spotify-button-row, #vc-spotify-album-title {
+    .vc-spotify-button-row {
         opacity: 0;
         transition: opacity 0.4s ease-out;
     }
