--- a/VencordStuffs/BetterMediaPlayer.plugin.css
+++ b/VencordStuffs/BetterMediaPlayer.plugin.css
@@ -259,7 +259,7 @@
     .vc-spotify-button-row {
         opacity: 0;
         transition: opacity 0.4s ease-out;
-    }
+    };
     &:hover {
         height: 115px;
         #vc-spotify-progress-bar,
